# Csolver

./: .gitignore  ARCHITECTURE.md  Cargo.toml  LICENSE.md  README.md  Todo.md  clippy.toml
.github/workflows/: ci.yml
crates/absint/Verification/: README.md
crates/absint/src/: analysis.rs  engine.rs  induction.rs  interval.rs  lib.rs  pointsto.rs  relational.rs
crates/asm/Verification/: README.md
crates/asm/src/: arm64.rs  arm64_text.rs  arm64_text_tests.rs  att.rs  att_tests.rs  blocks.rs  lib.rs  x86.rs  x86text.rs  x86text_tests.rs
crates/asm/src/x86/: cond.rs  decode.rs  display.rs  lower.rs  opcode.rs  sse.rs  typed.rs  vex.rs
crates/asm/src/x86/tests/: mod.rs  part_a.rs  part_b.rs  part_c.rs  part_d.rs  part_e.rs  part_f.rs
crates/asm/src/x86text/: att.rs  intel.rs
crates/asm/tests/: bridge_soundness.rs  x86_length_diff.rs  x86_semantics_diff.rs
crates/cli/: Cargo.toml
crates/cli/Verification/: README.md
crates/cli/src/: cli_tests.rs  demo.rs  main.rs  scan.rs  scan_dir.rs  scan_run.rs  verify.rs
crates/contracts/Verification/: README.md
crates/contracts/data/: barrier.contract  free.contract  lifetime.contract  mmio.contract  provenance.contract  rcu.contract  taint.contract  thread.contract  typestate.contract  user_copy.contract
crates/contracts/src/: contracts_tests.rs  lib.rs  parse.rs
crates/core/Verification/: README.md
crates/core/src/: lib.rs  location.rs  proof.rs  property.rs  value.rs
crates/elf/Verification/: README.md
crates/elf/src/: dwarf.rs  elf_tests.rs  elf_tests2.rs  iso.rs  iso_tests.rs  lib.rs  load.rs  pe.rs  wim.rs  wim_tests.rs
crates/ir/Verification/: README.md
crates/ir/src/: func.rs  inst.rs  lib.rs  ty.rs
crates/llvm/: Cargo.toml
crates/llvm/Verification/: README.md
crates/llvm/src/: debuginfo.rs  lexer.rs  lib.rs  llvm_tests.rs  lower.rs  parser.rs
crates/llvm/src/lower/: block.rs  contract.rs  gep.rs  slices.rs
crates/llvm/src/parser/: ast.rs  attrs.rs  func.rs  inst.rs  lex.rs
crates/mir/Verification/: README.md
crates/mir/src/: lexer.rs  lib.rs  lower.rs  parser.rs
crates/mir/src/lower/: helpers.rs  place.rs  stmt.rs
crates/mir/src/parser/: body.rs  expr.rs  helpers.rs  types.rs
crates/report/src/: lib.rs
crates/smt/: Cargo.toml
crates/smt/Verification/: README.md
crates/smt/src/: lib.rs
crates/solver/: Cargo.toml
crates/solver/Verification/: README.md
crates/solver/src/: bitblast.rs  bitblast_tests.rs  bitprecise.rs  blaster.rs  expr.rs  lib.rs  linear.rs  sat.rs  sat_learn.rs
crates/symbolic/: Cargo.toml
crates/symbolic/Verification/: README.md
crates/symbolic/src/: exec.rs  lib.rs  lockclass.rs  summary.rs
crates/symbolic/src/exec/: calls.rs  checks.rs  classify.rs  decide.rs  driver.rs  effects.rs  eval.rs  kernel_names.rs  loadrec.rs  loops.rs  merge.rs  mergecore.rs  sentinel.rs  state.rs  step.rs  step_contract.rs  step_mem.rs  value.rs
crates/symbolic/src/exec/tests/: mod.rs  part_a.rs  part_c.rs  part_d.rs  part_e.rs  part_g.rs
crates/symbolic/src/summary/: facts.rs  module.rs  perfn.rs  tests.rs
crates/testsuite/: Cargo.toml
crates/testsuite/Verification/: README.md
crates/testsuite/src/: lib.rs  loop_fixtures.rs  memory_fixtures.rs  ptr_fixtures.rs  scalar_fixtures.rs
crates/testsuite/tests/: binary.rs  end_to_end.rs  llvm_frontend.rs  mir_frontend.rs
crates/testsuite/tests/llvm_frontend/: main.rs  part_a.rs  part_b.rs  part_c.rs  part_d.rs  part_e.rs  part_f.rs  part_g.rs  part_h.rs  part_i.rs  part_j.rs
crates/testsuite/tests/mir_frontend/: main.rs  part_a.rs  part_b.rs  part_c.rs
crates/verifier/: Cargo.toml
crates/verifier/Verification/: README.md
crates/verifier/src/: contracts.rs  datarace.rs  discharge.rs  interleave.rs  lib.rs  mem2reg.rs  precond.rs  report.rs  run.rs  wholeprog.rs
crates/verifier/src/contracts/: scalars.rs  tests2.rs
crates/verifier/src/interleave/: crossentry.rs
differential/: .gitignore  Cargo.toml  README.md  run.sh
differential/c/: .gitignore  README.md  corpus.c  drive.c  run.sh
differential/src/: lib.rs
differential/tests/: drive.rs
docs/: AUDIT.md  ELF-BINARY-PLAN.md  PROVABILITY.md  ROADMAP.md  STATUS.md  VALIDATION-READINESS.md  complete-pointer-provenance-plan.md  copyfail-detection.md  decided-rate-roadmap.md  exploit-taxonomy.md  gpu-architecture-assessment.md  pointsto-devirt-design.md  soundness-invariants.md  unknown-under-3pct-roadmap.md
scaling/: README.md  aggregate.sh  run.sh  selftest.sh
scaling/kernel/: .gitignore  README.md  full-scan.sh  run.sh
scaling/kernel/samples/: driver_demo.c
scaling/miri/: Cargo.toml  README.md  run.sh
scaling/miri/src/: lib.rs
scaling/miri/tests/: fuzz.rs
tests/dwarf-corpus/: README.md  c_structs.c  c_structs.ll  cpp_refmember.cpp  cpp_refmember.ll  cpp_refs.cpp  cpp_refs.ll  d_types.d  d_types.ll  objc_ptrs.ll  objc_ptrs.m  swift_types.ll  swift_types.swift  zig_ptrs.ll  zig_ptrs.zig
